--- a/sites/all/modules/vsite/vsite_help/help/vsite_help.help.ini
+++ b/sites/all/modules/vsite/vsite_help/help/vsite_help.help.ini
@@ -1,144 +1,312 @@
 [Scholar-Web-Sites-Project-Documentation]
-title = "Scholar Web Sites Project Documentation"
+title = Scholar Web Sites Project Documentation
 file = Scholar-Web-Sites-Project-Documentation
 weight = 0
 parent = 
 
-[About-the-project]
-title = "About the project"
-file = About-the-project
-weight = 0
+[About-the-Project]
+title = About the Project
+file = About-the-Project
+weight = -15
 parent = Scholar-Web-Sites-Project-Documentation
 
-[Developers-Documentations]
-title = "Developers Documentations"
-file = Developers-Documentations
+[Who-Can-Have-a-Site]
+title = Who Can Have a Site
+file = Who-Can-Have-a-Site
+weight = -15
+parent = About-the-Project
+
+[Project-Team]
+title = Project Team
+file = Project-Team
+weight = -14
+parent = About-the-Project
+
+[Versions]
+title = Versions
+file = Versions
+weight = -13
+parent = About-the-Project
+
+[Advantages-of-the-Scholars-Web-Sites-project]
+title = Advantages of the Scholars' Web Sites project
+file = Advantages-of-the-Scholars-Web-Sites-project
 weight = 0
+parent = About-the-Project
+
+[User-Documention]
+title = User Documention
+file = User-Documention
+weight = -14
 parent = Scholar-Web-Sites-Project-Documentation
 
-[Creating-a-new-feature]
-title = "Creating a new feature"
-file = Creating-a-new-feature
-weight = 0
-parent = Developers-Documentations
+[Getting-Started]
+title = Getting Started
+file = Getting-Started
+weight = -15
+parent = User-Documention
 
-[Creating-a-new-theme]
-title = "Creating a new theme"
-file = Creating-a-new-theme
-weight = 0
-parent = Developers-Documentations
+[The-Control-Panel]
+title = The Control Panel
+file = The-Control-Panel
+weight = -15
+parent = Getting-Started
 
-[Legal]
-title = "Legal"
-file = Legal
-weight = 0
-parent = Scholar-Web-Sites-Project-Documentation
+[Set-up-Basic-Info-]
+title = Set up Basic Info 
+file = Set-up-Basic-Info-
+weight = -14
+parent = Getting-Started
 
-[Users-Documentation]
-title = "Users Documentation"
-file = Users-Documentation
-weight = 0
-parent = Scholar-Web-Sites-Project-Documentation
+[Choose-the-Basic-Look-of-Your-Site]
+title = Choose the Basic Look of Your Site
+file = Choose-the-Basic-Look-of-Your-Site
+weight = -13
+parent = Getting-Started
 
-[Control-Panel]
-title = "Control Panel"
-file = Control-Panel
+[Content-Management]
+title = Content Management
+file = Content-Management
+weight = -14
+parent = User-Documention
+
+[Adding-New-Content]
+title = Adding New Content
+file = Adding-New-Content
+weight = -13
+parent = Content-Management
+
+[Editing-Content]
+title = Editing Content
+file = Editing-Content
+weight = -12
+parent = Content-Management
+
+[Managing-Your-Content]
+title = Managing Your Content
+file = Managing-Your-Content
+weight = -9
+parent = Content-Management
+
+[Categorizing-Your-Content]
+title = Categorizing Your Content
+file = Categorizing-Your-Content
 weight = 0
-parent = Users-Documentation
+parent = Content-Management
+
+[Creating-Custom-Menu-Links]
+title = Creating Custom Menu Links
+file = Creating-Custom-Menu-Links
+weight = 0
+parent = Content-Management
+
+[Managing-Files-and-Images]
+title = Managing Files and Images
+file = Managing-Files-and-Images
+weight = 0
+parent = Content-Management
+
+[Monitoring-Others-Content]
+title = Monitoring Others' Content
+file = Monitoring-Others-Content
+weight = 0
+parent = Content-Management
+
+[Managing-the-Look-of-Your-Site]
+title = Managing the Look of Your Site
+file = Managing-the-Look-of-Your-Site
+weight = -13
+parent = User-Documention
 
 [Features]
-title = "Features"
+title = Features
 file = Features
-weight = -15
-parent = Control-Panel
+weight = -12
+parent = User-Documention
 
-[Announcements-feature]
-title = "Announcements feature"
-file = Announcements-feature
-weight = 0
+[Managing-Features]
+title = Managing Features
+file = Managing-Features
+weight = -15
 parent = Features
+
+[Available-Features]
+title = Available Features
+file = Available-Features
+weight = -14
+parent = Features
+
+[Announcement-feature]
+title = Announcement feature
+file = Announcement-feature
+weight = -15
+parent = Available-Features
 
 [Blog-feature]
-title = "Blog feature"
+title = Blog feature
 file = Blog-feature
+weight = -14
+parent = Available-Features
+
+[CV---Bio-feature]
+title = CV / Bio feature
+file = CV---Bio-feature
+weight = -13
+parent = Available-Features
+
+[Create-Edit-your-Bio]
+title = Create/Edit your Bio
+file = Create-Edit-your-Bio
 weight = 0
-parent = Features
+parent = CV---Bio-feature
+
+[Create-Edit-your-CV]
+title = Create/Edit your CV
+file = Create-Edit-your-CV
+weight = 0
+parent = CV---Bio-feature
+
+[Dataverse-feature]
+title = Dataverse feature
+file = Dataverse-feature
+weight = -12
+parent = Available-Features
+
+[Feed-feature]
+title = Feed feature
+file = Feed-feature
+weight = -11
+parent = Available-Features
 
 [Links-feature]
-title = "Links feature"
+title = Links feature
 file = Links-feature
-weight = 0
-parent = Features
+weight = -10
+parent = Available-Features
 
-[Settings]
-title = "Settings"
-file = Settings
+[Pages-feature]
+title = Pages feature
+file = Pages-feature
+weight = -9
+parent = Available-Features
+
+[Photo-Gallery-feature]
+title = Photo Gallery feature
+file = Photo-Gallery-feature
+weight = -8
+parent = Available-Features
+
+[Publications-feature]
+title = Publications feature
+file = Publications-feature
+weight = -7
+parent = Available-Features
+
+[Software-feature]
+title = Software feature
+file = Software-feature
+weight = -6
+parent = Available-Features
+
+[Site-Settings]
+title = Site Settings
+file = Site-Settings
+weight = -11
+parent = User-Documention
+
+[Change-the-look-of-your-site]
+title = Change the look of your site
+file = Change-the-look-of-your-site
+weight = 0
+parent = Site-Settings
+
+[Manage-Basic-Site-Information]
+title = Manage Basic Site Information
+file = Manage-Basic-Site-Information
+weight = 0
+parent = Site-Settings
+
+[Manage-Menus]
+title = Manage Menus
+file = Manage-Menus
+weight = 0
+parent = Site-Settings
+
+[Other-settings]
+title = Other settings
+file = Other-settings
+weight = 0
+parent = Site-Settings
+
+[Setting-up-your-web-sites-front-page]
+title = Setting up your web site's front page
+file = Setting-up-your-web-sites-front-page
+weight = 0
+parent = Site-Settings
+
+[Site-layout]
+title = Site layout
+file = Site-layout
+weight = 0
+parent = Site-Settings
+
+[Managing-Your-Users]
+title = Managing Your Users
+file = Managing-Your-Users
+weight = -9
+parent = User-Documention
+
+[Getting-Project-News]
+title = Getting Project News
+file = Getting-Project-News
+weight = 0
+parent = User-Documention
+
+[Getting-Support]
+title = Getting Support
+file = Getting-Support
+weight = 0
+parent = User-Documention
+
+[Developer-Documentation]
+title = Developer Documentation
+file = Developer-Documentation
+weight = -12
+parent = Scholar-Web-Sites-Project-Documentation
+
+[Creating-a-Scholars-Web-Sites-feature]
+title = Creating a Scholars Web Sites feature
+file = Creating-a-Scholars-Web-Sites-feature
+weight = 0
+parent = Developer-Documentation
+
+[Node-templates--tbc-]
+title = Node templates (tbc)
+file = Node-templates--tbc-
+weight = 0
+parent = Creating-a-Scholars-Web-Sites-feature
+
+[Creating-a-Scholars-Web-Site-theme]
+title = Creating a Scholars' Web Site theme
+file = Creating-a-Scholars-Web-Site-theme
+weight = 0
+parent = Developer-Documentation
+
+[Regions-and-body-tag-classes]
+title = Regions and body tag classes
+file = Regions-and-body-tag-classes
+weight = -15
+parent = Creating-a-Scholars-Web-Site-theme
+
+[Default-layout-setup]
+title = Default layout setup
+file = Default-layout-setup
 weight = -14
-parent = Control-Panel
+parent = Creating-a-Scholars-Web-Site-theme
 
-[Bio-settings]
-title = "Bio settings"
-file = Bio-settings
+[Testing-your-theme]
+title = Testing your theme
+file = Testing-your-theme
 weight = 0
-parent = Settings
-
-[Changing-the-theme--look-and-feel--of-your-site]
-title = "Changing the theme (look and feel) of your site"
-file = Changing-the-theme--look-and-feel--of-your-site
-weight = 0
-parent = Settings
-
-[Front-page-settings]
-title = "Front page settings"
-file = Front-page-settings
-weight = 0
-parent = Settings
-
-[Layout-your-site]
-title = "Layout your site"
-file = Layout-your-site
-weight = 0
-parent = Settings
-
-[Logo-settings]
-title = "Logo settings"
-file = Logo-settings
-weight = 0
-parent = Settings
-
-[Manage-your-menus]
-title = "Manage your menus"
-file = Manage-your-menus
-weight = 0
-parent = Settings
-
-[Your-site-information]
-title = "Your site information"
-file = Your-site-information
-weight = 0
-parent = Settings
-
-[Get-support]
-title = "Get support"
-file = Get-support
-weight = 0
-parent = Control-Panel
-
-[Getting-news]
-title = "Getting news"
-file = Getting-news
-weight = 0
-parent = Control-Panel
-
-[Manage-your-content]
-title = "Manage your content"
-file = Manage-your-content
-weight = 0
-parent = Control-Panel
-
-[Manage-your-site-users]
-title = "Manage your site users"
-file = Manage-your-site-users
-weight = 0
-parent = Control-Panel
+parent = Creating-a-Scholars-Web-Site-theme
 
