--- a/sites/all/modules/vsite/vsite_help/help/vsite_help.help.ini
+++ b/sites/all/modules/vsite/vsite_help/help/vsite_help.help.ini
@@ -281,7 +281,7 @@ weight = 0
 parent = Developer-Documentation
 
 [Node-templates--tbc-]
-title = Node templates (tbc)
+title = Node templates
 file = Node-templates--tbc-
 weight = 0
 parent = Creating-a-Scholars-Web-Sites-feature
