additions and changes to the theming docs

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -2,7 +2,7 @@
 title = Scholar Web Sites Project Documentation
 file = Scholar-Web-Sites-Project-Documentation
 weight = 0
-parent = 
+parent =
 
 [About-the-Project]
 title = About the Project
@@ -47,7 +47,7 @@ weight = -15
 parent = User-Documention
 
 [Set-up-Basic-Info-]
-title = Set up Basic Info 
+title = Set up Basic Info
 file = Set-up-Basic-Info-
 weight = -15
 parent = Getting-Started
@@ -334,15 +334,29 @@ file = Default-layout-setup
 weight = -14
 parent = Creating-a-Scholars-Web-Site-theme
 
-[Submitting-Your-Theme]
-title = Submitting Your Theme
-file = Submitting-Your-Theme
+[Components-theme]
+title = Components of a theme
+file = Components-of-a-theme
+weight = -10
+parent = Creating-a-Scholars-Web-Site-theme
+
+[Theme-flavors]
+title = Theme 'flavors'
+file = Theme-flavors
 weight = 0
 parent = Creating-a-Scholars-Web-Site-theme
 
 [Testing-your-theme]
 title = Testing your theme
 file = Testing-your-theme
-weight = 0
+weight = 1
 parent = Creating-a-Scholars-Web-Site-theme
+
+[Submitting-Your-Theme]
+title = Submitting Your Theme
+file = Submitting-Your-Theme
+weight = 2
+parent = Creating-a-Scholars-Web-Site-theme
+
+
 
