--- a/.htaccess
+++ b/.htaccess
@@ -104,9 +104,10 @@ DirectoryIndex index.php
   #
   # If your site is running in a VirtualDocumentRoot at http://example.com/,
   # uncomment the following line:
-  # RewriteBase /
+ # RewriteBase /
 
   # Rewrite URLs of the form 'x' to the form 'index.php?q=x'.
+  RewriteCond %{SERVER_NAME} !projects
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_URI} !=/favicon.ico
