added Profiles feature

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -202,6 +202,12 @@ file = Dataverse-feature
 weight = -11
 parent = Available-Features
 
+[Events-feature]
+title = Events feature
+file = Events-feature
+weight = -10
+parent = Available-Features
+
 [Feed-feature]
 title = Feed feature
 file = Feed-feature
@@ -224,6 +230,13 @@ parent = Available-Features
 title = Image Gallery feature
 file = Image-Gallery-feature
 weight = -7
+parent = Available-Features
+
+
+[Profiles-feature]
+title = Profiles-feature
+file = Profiles-feature
+weight = -6
 parent = Available-Features
 
 [Publications-feature]
