changes to docs

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -46,9 +46,9 @@ file = Getting-Started
 weight = -15
 parent = User-Documention
 
-[Set-up-Basic-Info-]
+[Set-up-Basic-Info]
 title = Set up Basic Info
-file = Set-up-Basic-Info-
+file = Set-up-Basic-Info
 weight = -15
 parent = Getting-Started
 
