added new entries

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -214,16 +214,16 @@ file = Feed-feature
 weight = -10
 parent = Available-Features
 
+[Front-feature]
+title = Front feature
+file = Front-feature
+weight = -10
+parent = Available-Features
+
 [Links-feature]
 title = Links feature
 file = Links-feature
 weight = -9
-parent = Available-Features
-
-[Pages-feature]
-title = Pages feature
-file = Pages-feature
-weight = -8
 parent = Available-Features
 
 [Image-Gallery-feature]
@@ -232,6 +232,11 @@ file = Image-Gallery-feature
 weight = -7
 parent = Available-Features
 
+[Pages-feature]
+title = Pages feature
+file = Pages-feature
+weight = -8
+parent = Available-Features
 
 [Profiles-feature]
 title = Profiles-feature
@@ -242,6 +247,12 @@ parent = Available-Features
 [Publications-feature]
 title = Publications feature
 file = Publications-feature
+weight = -6
+parent = Available-Features
+
+[Reader-feature]
+title = Reader feature
+file = Reader-feature
 weight = -6
 parent = Available-Features
 
