--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -172,6 +172,12 @@ file = Blog-feature
 weight = -14
 parent = Available-Features
 
+[Book-feature]
+title = Book feature
+file = Book-feature
+weight = -14
+parent = Available-Features
+
 [Class-feature]
 title = Class feature
 file = Class-feature
