--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -172,9 +172,9 @@ file = Blog-feature
 weight = -14
 parent = Available-Features
 
-[Book-feature]
-title = Book feature
-file = Book-feature
+[Booklet-feature]
+title = Booklet feature
+file = Booklet-feature
 weight = -14
 parent = Available-Features
 
