--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -31,8 +31,15 @@ parent = About-the-Project
 [Advantages-of-the-Scholars-Web-Sites-project]
 title = Advantages of the Scholars' Web Sites project
 file = Advantages-of-the-Scholars-Web-Sites-project
+weight = -12
+parent = About-the-Project
+
+[FAQ]
+title = Scholars' Web Sites Project - Frequently Asked Questions
+file = FAQ
 weight = 0
 parent = About-the-Project
+
 
 [User-Documention]
 title = User Documention
