cleanup title faq

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -35,7 +35,7 @@ weight = -12
 parent = About-the-Project
 
 [FAQ]
-title = Scholars' Web Sites Project - Frequently Asked Questions
+title = Frequently Asked Questions
 file = FAQ
 weight = 0
 parent = About-the-Project
