goodbye extra code

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -365,6 +365,12 @@ file = Theme-flavors
 weight = 0
 parent = Creating-a-Scholars-Web-Site-theme
 
+[Theme-Info-File]
+title = Theme .info file settings
+file = Theme-Info-File
+weight = 1
+parent = Creating-a-Scholars-Web-Site-theme
+
 [Testing-your-theme]
 title = Testing your theme
 file = Testing-your-theme
