--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -122,13 +122,13 @@ parent = User-Documention
 [Chosing-your-Overall-Theme]
 title = Chosing your Overall Theme
 file = Chosing-your-Overall-Theme
-weight = 0
+weight = -3
 parent = Managing-the-Look-of-Your-Site
 
-[Customizing-Your-Layout]
-title = Customizing Your Layout
-file = Customizing-Your-Layout
-weight = 0
+[Customizing-Your-Site-Layout]
+title = Customizing Your Site Layout
+file = Customizing-Your-Site-Layout
+weight = -2
 parent = Managing-the-Look-of-Your-Site
 
 [Features]
@@ -266,38 +266,21 @@ parent = User-Documention
 [Site-Information]
 title = Site Information
 file = Site-Information
-weight = -15
+weight = -13
 parent = Site-Settings
 
-[Front-Page]
-title = Front Page
-file = Front-Page
-weight = -14
-parent = Site-Settings
+[Site Logo]
+title = Site Logo
+file = Site-Logo
+weight = -12
+parent = Site-Information
 
 [Menus]
 title = Menus
 file = Menus
-weight = -13
+weight = -15
 parent = Site-Settings
 
-[Photo]
-title = Photo
-file = Photo
-weight = -12
-parent = Site-Settings
-
-[Site-Layout]
-title = Site Layout
-file = Site-Layout
-weight = -11
-parent = Site-Settings
-
-[Theme-Selection]
-title = Theme Selection
-file = Theme-Selection
-weight = -10
-parent = Site-Settings
 
 [Other-Settings]
 title = Other Settings
