--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -282,6 +282,12 @@ file = Other-Settings
 weight = -9
 parent = Site-Settings
 
+[My-Account]
+title = My Account
+file = My-Account
+weight = -10
+parent = User-Documention
+
 [Managing-Your-Users]
 title = Managing Your Users
 file = Managing-Your-Users
