--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -288,6 +288,12 @@ file = My-Account
 weight = -10
 parent = User-Documention
 
+[Adding-Your-Personal-Information]
+title = Adding Your Personal Information
+file = Adding-Your-Personal-Information
+weight = 0
+parent = My-Account
+
 [Managing-Your-Users]
 title = Managing Your Users
 file = Managing-Your-Users
