updated taxonomy help location and add presentations help file

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -89,12 +89,6 @@ file = Managing-Your-Content
 weight = -9
 parent = Content-Management
 
-[Categorizing-Your-Content---Taxonomy]
-title = Categorizing Your Content - Taxonomy
-file = Categorizing-Your-Content---Taxonomy
-weight = 0
-parent = Content-Management
-
 [Creating-Custom-Menu-Links]
 title = Creating Custom Menu Links
 file = Creating-Custom-Menu-Links
@@ -233,8 +227,14 @@ file = Pages-feature
 weight = -8
 parent = Available-Features
 
+[Presentations-feature]
+title = Presentations feature
+file = Presentations-feature
+weight = -6
+parent = Available-Features
+
 [Profiles-feature]
-title = Profiles-feature
+title = Profiles feature
 file = Profiles-feature
 weight = -6
 parent = Available-Features
@@ -263,18 +263,23 @@ file = Site-Settings
 weight = -11
 parent = User-Documention
 
-[Site-Information]
-title = Site Information
-file = Site-Information
-weight = -13
-parent = Site-Settings
-
 [Menus]
 title = Menus
 file = Menus
 weight = -15
 parent = Site-Settings
 
+[Categorizing-Your-Content---Taxonomy]
+title = Categorizing Your Content - Taxonomy
+file = Categorizing-Your-Content---Taxonomy
+weight = -14
+parent = Site-Settings
+
+[Site-Information]
+title = Site Information
+file = Site-Information
+weight = -13
+parent = Site-Settings
 
 [Other-Settings]
 title = Other Settings
