updated text instances of Scholars Web Sites Project to OpenScholar in documentation

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -1,6 +1,6 @@
-[Scholar-Web-Sites-Project-Documentation]
-title = Scholar Web Sites Project Documentation
-file = Scholar-Web-Sites-Project-Documentation
+[OpenScholar-Documentation]
+title = OpenScholar Documentation
+file = OpenScholar-Documentation
 weight = 0
 parent =
 
@@ -8,14 +8,13 @@ parent =
 title = About the Project
 file = About-the-Project
 weight = -15
-parent = Scholar-Web-Sites-Project-Documentation
+parent = OpenScholar-Documentation
 
 [Project-Team]
 title = Project Team
 file = Project-Team
 weight = -14
 parent = About-the-Project
-
 
 [FAQ]
 title = Frequently Asked Questions
@@ -27,7 +26,7 @@ parent = About-the-Project
 title = User Documention
 file = User-Documention
 weight = -14
-parent = Scholar-Web-Sites-Project-Documentation
+parent = OpenScholar-Documentation
 
 [Getting-Started]
 title = Getting Started
@@ -321,7 +320,7 @@ parent = User-Documention
 title = Developer Documentation
 file = Developer-Documentation
 weight = -12
-parent = Scholar-Web-Sites-Project-Documentation
+parent = OpenScholar-Documentation
 
 [Creating-a-Scholars-Web-Sites-feature]
 title = Creating a Scholars Web Sites feature
