updated developer documentation to text to read OpenScholar

--- a/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
+++ b/sites/all/modules/vsite/vsitehelp/help/vsitehelp.help.ini
@@ -322,15 +322,15 @@ file = Developer-Documentation
 weight = -12
 parent = OpenScholar-Documentation
 
-[Creating-a-Scholars-Web-Sites-feature]
-title = Creating a Scholars Web Sites feature
-file = Creating-a-Scholars-Web-Sites-feature
+[Creating-an-OpenScholar-feature]
+title = Creating a OpenScholar feature
+file = Creating-an-OpenScholar-feature
 weight = 0
 parent = Developer-Documentation
 
-[Creating-a-Scholars-Web-Site-theme]
-title = Creating a Scholars' Web Site theme
-file = Creating-a-Scholars-Web-Site-theme
+[Creating-an-OpenScholar-theme]
+title = Creating an OpenScholar theme
+file = Creating-an-OpenScholar-theme
 weight = 0
 parent = Developer-Documentation
 
@@ -338,43 +338,43 @@ parent = Developer-Documentation
 title = Regions and body tag classes
 file = Regions-and-body-tag-classes
 weight = -15
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 [Default-layout-setup]
 title = Default layout setup
 file = Default-layout-setup
 weight = -14
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 [Components-theme]
 title = Components of a theme
 file = Components-of-a-theme
 weight = -10
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 [Theme-flavors]
 title = Theme 'flavors'
 file = Theme-flavors
 weight = 0
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 [Theme-Info-File]
 title = Theme .info file settings
 file = Theme-Info-File
 weight = 1
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 [Testing-your-theme]
 title = Testing your theme
 file = Testing-your-theme
 weight = 1
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 [Submitting-Your-Theme]
 title = Submitting Your Theme
 file = Submitting-Your-Theme
 weight = 2
-parent = Creating-a-Scholars-Web-Site-theme
+parent = Creating-an-OpenScholar-theme
 
 
 
