--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sites/all/modules/openscholar_vsite"]
 	path = sites/all/modules/openscholar_vsite
 	url = git.drupal.org:project/openscholar_vsite.git
+[submodule "profiles/openscholar"]
+	path = profiles/openscholar
+	url = git.drupal.org:project/openscholar.git
